--- a/app/src/main/res/layout/item_shopping_list.xml
+++ b/app/src/main/res/layout/item_shopping_list.xml
@@ -1,49 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	android:id="@+id/shoppingListItemLayout"
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	android:layout_marginBottom="1dp"
-	android:background="@color/white"
-	android:orientation="horizontal">
+<com.chauthai.swipereveallayout.SwipeRevealLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    app:dragEdge="right"
+    app:mode="same_level">
 
-	<android.support.v7.widget.AppCompatImageView
-		android:id="@+id/shoppingListArchive"
-		android:layout_width="40dp"
-		android:layout_height="40dp"
-		android:layout_gravity="center_vertical"
-		android:layout_marginStart="@dimen/half_size"
-		android:padding="@dimen/quarter_size"
-		android:tint="@color/green"
-		app:srcCompat="@drawable/ic_done_black_24dp" />
+    <FrameLayout
+        android:layout_width="@dimen/item_delete_width"
+        android:layout_height="match_parent">
 
-	<View
-		android:id="@+id/shoppingListInnerDivider"
-		android:layout_width="1dp"
-		android:layout_height="match_parent"
-		android:layout_marginBottom="@dimen/quarter_size"
-		android:layout_marginEnd="@dimen/half_size"
-		android:layout_marginStart="@dimen/half_size"
-		android:layout_marginTop="@dimen/quarter_size"
-		android:background="@color/gray" />
+        <android.support.v7.widget.AppCompatImageButton
+            android:id="@+id/deleteShoppingList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="?android:attr/selectableItemBackground"
+            android:padding="0dp"
+            android:tint="@color/red"
+            app:srcCompat="@drawable/ic_delete_black_24dp"/>
 
-	<TextView
-		android:id="@+id/shoppingListTitle"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:layout_gravity="start|center"
-		android:layout_marginEnd="8dp"
-		android:layout_marginStart="@dimen/half_size"
-		android:layout_weight="1"
-		android:ellipsize="end"
-		android:gravity="start|center"
-		android:maxLines="1"
-		android:paddingBottom="@dimen/standard_size"
-		android:paddingTop="@dimen/standard_size"
-		android:singleLine="true"
-		android:textColor="@color/black"
-		android:textSize="16sp" />
+    </FrameLayout>
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/shoppingListItemLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
+        android:background="@color/white"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/shoppingListTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|center"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="@dimen/half_size"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:gravity="start|center"
+            android:maxLines="1"
+            android:paddingBottom="@dimen/standard_size"
+            android:paddingTop="@dimen/standard_size"
+            android:singleLine="true"
+            android:textColor="@color/black"
+            android:textSize="16sp"/>
+
+    </LinearLayout>
+
+</com.chauthai.swipereveallayout.SwipeRevealLayout>
